fixed scroll behaviour when table overflow

--- a/src/styles/investmentPrediction/investmentPrediction.module.css
+++ b/src/styles/investmentPrediction/investmentPrediction.module.css
@@ -1,17 +1,15 @@
 .prediction-main {
   display: flex;
   flex-flow: column nowrap;
-  height: 100vh;
+  overflow: hidden;
+}
 
-  & > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    gap: 1rem;
-    padding: 1rem 1.5rem;
-    height: 100%;
-
-    & > div {
-      height: 100%;
-    }
-  }
+.prediction-components {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 3fr;
+  grid-template-rows: 1fr;
+  gap: 1rem;
+  padding: 2rem;
+  height: 100%;
+  overflow: hidden;
 }
