--- a/src/styles/investmentPrediction/investmentPredictionTable.module.css
+++ b/src/styles/investmentPrediction/investmentPredictionTable.module.css
@@ -2,14 +2,11 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  overflow: auto;
-  padding-top: 1.5rem;
   box-sizing: border-box;
-  min-width: fit-content;
   background-color: var(--oxford-blue);
   color: var(--platinum);
   border-radius: 1rem;
-  height: 100%;
+  overflow-y: scroll;
 }
 
 .table-item {
